[package]
name = "raft-log-store"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3.1"
async-trait = "0.1.51"
byteorder = "1"
clap = { version = "3", features = ["derive"] }
openraft = { git = "https://github.com/datafuselabs/openraft", rev = "8938f3144e358eeb5cdaba2e025e902cdf8cd24a", features = ["serde"] }
reqwest = { version = "0.11.4", features = ["json"] }
rocksdb = "0.21.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.57"
thiserror = "1.0.30"
tokio = { version = "1.0", default-features = false, features = ["sync"] }
tracing = "0.1.29"
tracing-subscriber = { version = "0.3.0", features = ["env-filter"] }
